# origins

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  Makefile  README.md  todo.txt  vcpkg-configuration.json  vcpkg.json
src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  shader.h  sprite.h  time.h
src/Camera/: camera.cpp  camera.h
src/Config/: config.cpp  config.h
src/Game/: game.cpp  game.h
src/Mesh/: mesh.cpp  mesh.h
src/Object/: object.h
src/Resource/: resource.cpp  resource.h
src/Resources/: resources.h
src/Shaders/: default.frag  default.vert  light.frag  light.vert
src/Sprite/: sprite.h
src/Texture/: texture.cpp  texture.h
